# EvoMaster

./: .deploy-ci.yml  .env.template  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README-zh.md  README.md  app.py  pyproject.toml  pytest.ini  requirements.txt  run.py  run_ui.py
configs/: config.yaml
configs/mat_master/: config.yaml  mcp_config.json  mcp_config.test.json  mcp_config.uat.json
configs/minimal/: config.yaml  deepseek-v3.2-example.yaml  gpt-5-example.yaml
configs/minimal_kaggle/: deepseek-v3.2-example.yaml
configs/minimal_multi_agent/: config.yaml  deepseek-v3.2-example.yaml
configs/minimal_skill_task/: deepseek-v3.2-example.yaml
configs/x_master/: config.yaml
docs/: core.md
docs/zh/: core.md
evomaster/: __init__.py  config.py
evomaster/agent/: README.md  __init__.py  agent.py  context.py  test_agent_context.py
evomaster/core/: __init__.py  events.py  exp.py  playground.py  registry.py
evomaster/env/: __init__.py  bohrium.py  docker.py  local.py
evomaster/skills/: __init__.py  base.py
evomaster/utils/: __init__.py  llm.py  types.py
examples/llm/: config.yaml
playground/: README.md  README_CN.md
playground/mat_master/: README_WEB.md  start_dev.bat  start_dev.sh
playground/x_master/: README.md  README_CN.md
runs/minimal_multi_agent_20260202_105545/: config.yaml
runs/x_master_20260202_123326/: config.yaml
scripts/: create_chat_tables.sql
src/apis/: api_router.py  chat_api.py
src/base/: base_res.py  base_table.py
src/dao/: chat_events_table.py  chat_sessions_table.py  invocation_status_db.py  recommend_questions_db.py  session_files_db.py  user_prefence_db.py  user_questionnaire_db.py  user_quota_db.py
src/models/: chat.py  files.py  health.py  icl.py  invocation_status.py  md2pdf.py  preference.py  questionnaire.py  questions.py  quota.py  root.py  user.py
src/services/: agent_tools_status_service.py  chat_service.py  icl_service.py  (+8 more)
tests/: test_monthly_reset.py  test_nacos.py
ui/: __init__.py  server.py
(+209 files in other folders)
